outer arhitecture/rabbitmq-deploy/rabbitmq-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-node
  namespace: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - name: external
      port: 5672
      targetPort: 5672
      nodePort: 30210
      protocol: TCP
  type: NodePort
