outer arhitecture/rabbitmq-deploy/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-nginx
  namespace: rabbitmq
spec:
  ingressClassName: nginx
  rules:
  - host: "rabbit.docker.local"
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
